# chord-script

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
docs/: dsl-spec.md
examples/: blue_bossa.cchart  complex.cchart  parse_and_render.rs  render_svg.rs  show_error.rs  simple.cchart  test_song.chords
src/: chart.rs  exporter.rs  lib.rs  main.rs  parser.rs  renderer.rs
src/model/: mod.rs
src/parser/: mod.rs
src/render/: mod.rs  svg.rs
src/render/svg/: mod.rs  tests.rs
